# Sub-Extractor

./: .gitignore  LICENSE  README.md  README_zh.md  pyinstaller-gui.spec  pyproject.toml
.claude/: settings.local.json
examples/: basic_usage.py
src/sub_extractor/: __init__.py  __main__.py  cli.py  enums.py  exceptions.py  ffmpeg.py  models.py  pipeline.py
src/sub_extractor/detection/: __init__.py  base.py  external_sub_detector.py  hard_sub_detector.py  soft_sub_detector.py
src/sub_extractor/extraction/: __init__.py  base.py  bitmap_extractor.py  codec_map.py  ffmpeg_extractor.py  ocr_extractor.py
src/sub_extractor/gui/: __init__.py  __main__.py  check_tab.py  extract_tab.py  info_tab.py  main_window.py  models.py  pipeline_worker.py  widgets.py
src/sub_extractor/input/: __init__.py  base.py  video_input.py
src/sub_extractor/ocr/: __init__.py  deduplicator.py  engine.py  formatter.py  frame_extractor.py  preprocessor.py  timestamp.py
src/sub_extractor/processing/: __init__.py  base.py  ffmpeg_remuxer.py
tests/: __init__.py  conftest.py  test_models.py
tests/detection/: __init__.py  test_detectors.py
tests/extraction/: __init__.py
tests/input/: __init__.py  test_video_input.py
tests/processing/: __init__.py
