[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sub-extractor"
version = "0.1.0"
description = "Extract soft subtitles and external text subtitles from video files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sub Extractor Team"}
]
keywords = ["subtitle", "video", "extract", "ffmpeg", "mkv", "mp4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
sub-extractor = "sub_extractor.cli:main"

[project.urls]
Repository = "https://github.com/Sub-Extractor/Sub-Extractor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests that do not require ffmpeg",
    "integration: Integration tests that require ffmpeg installed",
]
addopts = "-v --tb=short"

[tool.setuptools.package-dir]
"sub_extractor" = "src/sub_extractor"
