[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sub-extractor"
version = "0.2.0"
description = "Extract soft, bitmap, and hardcoded subtitles from video files — with OCR support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sub Extractor Team"}
]
keywords = ["subtitle", "video", "extract", "ffmpeg", "mkv", "mp4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
gui = [
    "PySide6>=6.5",
]
ocr-easyocr = [
    "easyocr>=1.7",
    "opencv-python>=4.8",
]
ocr-paddleocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=3.0",
    "opencv-python>=4.8",
]
ocr = [
    "sub-extractor[ocr-easyocr]",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
sub-extractor = "sub_extractor.cli:main"
sub-extractor-gui = "sub_extractor.gui:launch_gui"

[project.urls]
Repository = "https://github.com/Sub-Extractor/Sub-Extractor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests that do not require ffmpeg",
    "integration: Integration tests that require ffmpeg installed",
]
addopts = "-v --tb=short"

[tool.setuptools.package-dir]
"sub_extractor" = "src/sub_extractor"
